2011-02-19  Christian Kuhn  <lolli@schwarzbuch>

	* Fixed bug #17671: Remove deprecated file typo3/contrib/json/json.php
	* Fixed bug #17656: Unit test fails because of invalid clear.gif (Thanks to Alexander Stehlik)
	* Fixed bug #17647: Method bytes() in tslib_cObj is deprecated and should be removed (Thanks to Peter Beernink)
	* Fixed bug #17645: Remove deprecated function formatSize() from t3lib_basicFileFunctions (Thanks to Peter Beernink)
	* Fixed bug #17644: Remove deprecated function getCountCacheTables() in SC_mod_web_ts_index (Thanks to Peter Beernink)

2011-02-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #17658: htmlArea RTE: Write troubleshooting messages to JavaScript console
	* Fixed issue #17659: htmlArea RTE: Delete deprecated plugin information variables
	* Fixed issue #17660: htmlArea RTE: Delete deprecated color conversion function aliases
	* Follow-up to issue #17559: htmlArea RTE: Delete deprecated code/functions from main js script

2011-02-17  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17592: ExtDirect API calls are splitted in single requests and slows down page loading

2011-02-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17616: htmlArea RTE: Link dialogue doesn't open when anchor class is set with double quotes

2011-02-17  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #17355: Dependencies in sysext 'version' and 'workspaces'
	* Fixed bug #17244: Error Message while Updating 4.4.6 > 4.5

2011-02-16  Jigal van Hemert  <jigal@xs4all.nl>

	* Cleanup #17606: Remove deprecated option TTFLocaleConv

2011-02-16  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17422: cObj->FORM() wasn't processing the $formData parameter (Thanks to Hubertus Golf)

2011-02-16  Francois Suter  <francois.suter@typo3.org>

	* Cleanup #17513: Improve sys_note CSH file
	* Fixed bug #17385: Restore proper behavior of LOAD_REGISTER (Thanks to Jo Hasenau)

2011-02-15  Stanislas Rolland  <typo3@sjbr.ca>
